SCADA-Monitor/VICTORIAMETRICS/INGRESS/Ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmagent
  namespace: vm-single
spec:
  ingressClassName: nginx
  rules:
  - host: vmagent.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vmagent-vmagent
            port:
              number: 8429
