SCADA-Monitor/VICTORIAMETRICS/INGRESS/Ingress2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: victoria-metrics-single
  name: victoria-metrics-single
  namespace: vm-single
spec:
  ingressClassName: nginx
  rules:
  - host: vmsingle.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vmsingle-vmsingle
            port:
              number: 8429
